--- a/Pages/Title.html
+++ b/Pages/Title.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Legend of the Change</title>
+        <link rel="stylesheet" type="text/css" href="Styles/Title.css" />
+        <title>The Legend of the Train</title>
     </head>
     <body>
-        
+        <h1>The Legend of the Train</h1>
+        <h3>By Gamer-Guy12</h3>
     </body>
 </html>
