--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             }, 100)
 
         </script>
-        <img id="0" class="slide" src="Pages/Title.html"/>
-        <img id="1" class="slide" src=""/>
+        <iframe id="0" class="slide" src="Pages/Title.html">You don't work</iframe>
         <button onclick="nextSlide()" class="leftButton noStyle"></button>
         <button onclick="prevSlide()" class="rightButton noStyle"></button>
     </body>
